package.json changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-k3yufd",
+  "name": "angular-d3-beizer-curve",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
